# monty_hall_simulator

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  defaults.cfg
.github/workflows/: c-cpp.yml
docs/: Doxyfile.in
inc/: MontyHall.hpp  Person.hpp  Player.hpp  monty_hall_simulator_config.h.in
inc/spdlog/: async.h  async_logger.h  common.h  formatter.h  logger.h  pattern_formatter-inl.h  pattern_formatter.h  spdlog.h  stopwatch.h
inc/spdlog/details/: backtracer.h  circular_q.h  file_helper-inl.h  file_helper.h  log_msg_buffer.h  mpmc_blocking_q.h  os-inl.h  os.h  periodic_worker.h  registry.h  synchronous_factory.h  tcp_client-windows.h  tcp_client.h  thread_pool-inl.h  thread_pool.h  udp_client-windows.h  udp_client.h
inc/spdlog/fmt/: bin_to_hex.h
inc/spdlog/fmt/bundled/: args.h  chrono.h  color.h  compile.h  core.h  format-inl.h  format.h  os.h  ostream.h  printf.h  ranges.h  std.h  xchar.h
inc/spdlog/sinks/: android_sink.h  ansicolor_sink.h  base_sink.h  basic_file_sink.h  daily_file_sink.h  dist_sink.h  dup_filter_sink.h  hourly_file_sink.h  mongo_sink.h  msvc_sink.h  null_sink.h  ostream_sink.h  qt_sinks.h  ringbuffer_sink.h  rotating_file_sink.h  sink.h  stdout_sinks.h  syslog_sink.h  systemd_sink.h  tcp_sink.h  udp_sink.h  win_eventlog_sink.h  wincolor_sink.h
src/: MontyHall.cpp  Person.cpp  Player.cpp  main.cpp
test/: CMakeLists.txt  CMakeLists.txt.in
test/src/: CMakeLists.txt  monty_hall_test.cpp  player_test.cpp
